Fri May 30 13:36:39 2003  Krishnakumar B  <kitty@spam.invalid.domain>

        * parser/parser/Parser.cpp (parse_ignoresect): Fixed a couple of
          warnings. Break out of infinite loop.

        * apps/svcconf/.depend.Makefile.ACEXML_XML_Svc_Conf_Parser:
        * common/.depend.Makefile.ACEXML:
        * examples/SAXPrint/.depend.Makefile.SAXPrint:
        * examples/svcconf/.depend.Makefile.Svcconf:
        * parser/parser/.depend.Makefile.ACEXML_Parser:

          Added missing dependency files. This should clear out the red.

        * examples/svcconf/main.cpp:
        * common/HttpCharStream.cpp:
        * parser/parser/Parser.i:

          Fixed warnings with BCB. Thanks to Johnny for reporting these.

Thu May 29 23:13:40 2003  Krishnakumar B  <kitty@spam.invalid.domain>

        * examples/SAXPrint/SAXPrint_Handler.cpp: Fixed some minor
          warnings.

Thu May 29 23:09:27 2003  Krishnakumar B  <kitty@spam.invalid.domain>

        * parser/parser/Makefile.Parser:

          Removed extra file left over by mistake.

Thu May 29 23:00:24 2003  Krishnakumar B  <kitty@spam.invalid.domain>

        * tests/Makefile.ContentHandler_Test:
        * tests/Makefile:

          This file got left out by mistake during the big merge.


Thu May 29 22:03:40 2003  Krishnakumar B  <kitty@spam.invalid.domain>

        * ACEXML/ACEXML.mwc:
        * ACEXML/ChangeLog:
        * ACEXML/apps/svcconf/ACEXML_XML_Svc_Conf_Parser.dsp:
        * ACEXML/apps/svcconf/Makefile.ACEXML_XML_Svc_Conf_Parser:
        * ACEXML/apps/svcconf/Makefile.ACEXML_XML_Svc_Conf_Parser.bor:
        * ACEXML/common/ACEXML.dsp:
        * ACEXML/common/Makefile.ACEXML:
        * ACEXML/common/Makefile.ACEXML.bor:
        * ACEXML/examples/SAXPrint/Makefile.SAXPrint:
        * ACEXML/examples/SAXPrint/Makefile.SAXPrint.bor:
        * ACEXML/examples/svcconf/Makefile:
        * ACEXML/examples/svcconf/Makefile.Svcconf:
        * ACEXML/examples/svcconf/Makefile.Svcconf.bor: